Update Swagger Products
